--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   
   <!-- BOOTSTRAP JAVASCRIPT PLUGIN -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<!--   <script type="text/javascript" src="js/countdowntimermod.js"></script>
- -->
+
+
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/ticker.css">
+ 
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
   <!-- Favicon -->
@@ -45,7 +45,6 @@
         <div id="slideToggle">
         <p class="lead" >A timer based on the Pomodoro Technique</p>
         </div>
-
         <div class="clear">
         <br/>
             <div class="slideTogglebox">
@@ -66,7 +65,7 @@
           </div> <!-- end class "clear" -->
 
 
-       <div class="steps col-xs-12">
+        <div class="steps col-xs-12">
           <div class="col-xs-12 header-box-right">
             <div class="col-xs-6 work">
               <div><h3 class="col-xs-12 work-time text-center">Work Time (min)</h3></div>
@@ -77,6 +76,7 @@
                 </div>
             </div>
     
+
             <div class="col-xs-6">
               <div><h3 class="col-xs-12 text-center">Play Time (min)</h3></div>
               <div class="btn-group">
@@ -120,7 +120,6 @@
         <hr />
 
         <div class="buttons">
-
           <button class="btn btn-danger btn-lg col-xs-6" href="#" id="worktime">Time Worked
           </button>
           <button class="btn btn-danger btn-lg col-xs-6" href="#" id="breaktime">Time on Break
@@ -133,33 +132,16 @@
           </button>
         </div> <!-- end of class buttons -->
 
-
-            <div id="box">
-      <!-- this div encapsulates button is needed for test button to appear on hover effect -->
-      <!-- data-toggle="modal" -->
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg" id="manual">Test jokes</button></div>
-    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content open-window">
-          <img id = "chuck-picture" src = "images/chucknorris.jpg"/>
-          <div id = "they-say">They Say:
-             <div id = "chuck-joke"></div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-
         <hr />
 
         <footer>
         <br>
           <div>
           <!-- music player:   -->
-          <iframe class="video" width="400" height="34" src="https://www.youtube.com/embed/Rb0UmrCXxVA?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+          <iframe class="audio" width="400" height="40" src="https://www.youtube.com/embed/Rb0UmrCXxVA?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
           </div> 
           <br>
-          <div>&copy; 2017 | <a href="https://github.com/niktechnopro/Pomodoro-Clock">Focus! Team</a> Jennifer, Nick, Zach, Saif,  Taylor <!-- for class project by <span id="team">Focus! Team</span></div>
+          <div>&copy; 2017 | <a href="https://github.com/niktechnopro/Pomodoro-Clock">Focus! Team</a> Jennifer, Nick, Zach, Saiph,  Taylor <!-- for class project by <span id="team">Focus! Team</span></div>
             <div id="teamTogglebox">
               Focus! Team: Jennifer, Nick, Zach, Saiph, Taylor -->
             </div>
@@ -169,10 +151,30 @@
   </div> <!-- End of top container -->
 
 <!-- ******************************************************************* -->
+<!-- Large modal -->
+<div id="box">&nbsp&nbsp&nbsp&nbsp
+  <!-- this div encapsulates button is needed for test button to appear on hover effect -->
+  <!-- data-toggle="modal" -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg" id="manual">Test Modal</button></div>
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content open-window">
+      <img id = "chuck-picture" src = "images/chucknorris.jpg" alt="chuck norris funny picture should be here"/>
+      <div id = "they-say">They Say:
+         <div id = "chuck-joke"></div>
+
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ******************************************************************* -->
 </body>
+
 <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <script type="text/javascript" src="js/countdowntimermodnik1.js"></script>
+
+
 
 
 
